cmake_minimum_required(VERSION 3.26)
project(OOP)

set(CMAKE_CXX_STANDARD 17)

add_executable(OOP
        src/PlayerView/PlayerView.h
        src/PlayerView/PlayerView.cpp
        src/PlayerController/PlayerController.h
        src/IObserver/IObserver.h
        src/Observable/Observable.cpp
        src/Observable/Observable.h
        src/Player/Player.cpp
        src/Player/Player.h
        src/PlayerController/PlayerController.cpp
        src/PlayerController/PlayerController.h
        src/PlayerView/PlayerView.cpp
        src/PlayerView/PlayerView.h
        src/main.cpp
        src/FieldCell/FieldCell.cpp
        src/FieldCell/FieldCell.h
        src/Field/Field.cpp
        src/Field/Field.h
        src/Coordinate/Coordinate.h
        src/Events/IEvent/IEvent.h
        src/Events/HealEvent/HealEvent.cpp
        src/Events/HealEvent/HealEvent.h
        src/Events/TeleportEvent/TeleportEvent.cpp
        src/Events/TeleportEvent/TeleportEvent.h
        src/Events/IEvent/EventTarget.h
        src/Events/TrapEvent/TrapEvent.cpp
        src/Events/TrapEvent/TrapEvent.h
        src/FieldCreator/FieldCreator.cpp
        src/FieldCreator/FieldCreator.h
        src/FieldView/FieldView.cpp
        src/FieldView/FieldView.h
        src/EventFactory/EventFactory.cpp
        src/EventFactory/EventFactory.h
        src/Game/Game.cpp
        src/Game/Game.h
        src/GameMenu/GameMenu.cpp
        src/GameMenu/GameMenu.h
        src/IInput/IInput.h
        src/Controls/Controls.h
        src/KeyboardInput/KeyboardInput.cpp
        src/KeyboardInput/KeyboardInput.h
        src/FileConfigReader/FileConfigReader.cpp
        src/FileConfigReader/FileConfigReader.h
        input.txt
        src/Controls/ControlMap.h
        src/IConfigReader/IConfigReader.h
        src/FileConfigReader/FileConfigReader.cpp
        src/FileConfigReader/FileConfigReader.h
        src/LevelView/LevelView.cpp
        src/LevelView/LevelView.h
)
